templates/gocd-ansible-agent-deploymentconfig.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: gocd-ansible-agent
  name: gocd-ansible-agent
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: gocd-ansible-agent
    deploymentconfig: gocd-ansible-agent
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: gocd-ansible-agent
        deploymentconfig: gocd-ansible-agent
    spec:
      containers:
      - env:
        - name: GO_SERVER_URL
          value: https://gocd-server:8154/go
        image: docker-registry.default.svc:5000/${NAMESPACE}/gocd-ansible-agent:latest
        imagePullPolicy: Always
        name: gocd-ansible-agent
        resources:
          limits:
            cpu: 500m
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /go-agent/temp
          name: agent-config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: gocd-agent-configmap
        name: agent-config
  test: false
