templates/gocd-server-deploymentconfig.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: gocd-server
  name: gocd-server
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: gocd-server
    deploymentconfig: gocd-server
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: gocd-server
        deploymentconfig: gocd-server
    spec:
      containers:
      - args:
        - --http-address=:8080
        - --https-address=
        - --openshift-service-account=gocd
        - --upstream=http://localhost:8153
        - --provider=openshift
        - --cookie-secret=SECRET
        - --bypass-auth-except-for=/go
        - --pass-basic-auth=false
        - '-openshift-sar={"namespace": "${NAMESPACE}", "verb": "list", "resource":
          "services"}'
        image: registry.access.redhat.com/openshift3/oauth-proxy:v3.11
        imagePullPolicy: IfNotPresent
        name: oauth-proxy
        ports:
        - containerPort: 8080
          name: oauth-proxy
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      - image: docker-registry.default.svc:5000/${NAMESPACE}/gocd-server:latest
        imagePullPolicy: Always
        name: gocd-server
        ports:
        - containerPort: 8153
          protocol: TCP
        - containerPort: 8154
          protocol: TCP
        resources:
          limits:
            cpu: "1"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /go-server/temp
          name: config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: gocd
      serviceAccountName: gocd
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 493
          name: gocd-server-configmap
        name: config
  test: false
  triggers:
  - type: ConfigChange
