templates/gocd-server-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gocd-openshift
  name: gocd-openshift
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: gocd-server
    deploymentconfig: gocd-server
  sessionAffinity: None
  type: ClusterIP
