templates/gocd-server-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: gocd-server
  name: gocd
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: gocd-server
    weight: 100
  wildcardPolicy: None
